# internal/model/comment.go
@@ -1,0 +1,28 @@
+package model
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+	"gorm.io/gorm"
+)
+
+type Comment struct {
+	ID        uuid.UUID `gorm:"type:uuid;primaryKey"`
+	Content   string    `gorm:"not null"`
+	BlogID    uuid.UUID `gorm:"type:uuid;not null"`
+	Blog      Blog      `gorm:"foreignKey:BlogID"`
+	UserID    uuid.UUID `gorm:"type:uuid;not null"`
+	User      User      `gorm:"foreignKey:UserID"`
+	CreatedAt time.Time
+	UpdatedAt time.Time
+	DeletedAt gorm.DeletedAt `gorm:"index"`
+}
+
+func (c *Comment) BeforeCreate(*gorm.DB) error {
+	if c.ID == uuid.Nil {
+		c.ID = uuid.New()
+	}
+
+	return nil
+}
